src/objects/MICO_Project__c.object
<CustomObject>
    <description>Business Description: This object can be used to record projects in multi-project programs

Used In: Mission Control App</description>
    <fields>
        <fullName>Benefit_Drivers__c</fullName>
        <label>Benefit Drivers</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licence Utilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason C</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Benefit__c</fullName>
        <label>Estimated Net Benefit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Benefit_statement__c</fullName>
        <label>Expected Benefit statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prioritisation_Score__c</fullName>
        <label>Prioritisation Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Realised_Benefits_Statement__c</fullName>
        <label>Realised Benefits Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project mico</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Days_Remaining__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>